Improve nuget meta data

--- a/src/theodicean.Generators.Attributes/theodicean.Generators.Attributes.csproj
+++ b/src/theodicean.Generators.Attributes/theodicean.Generators.Attributes.csproj
@@ -8,6 +8,7 @@
         <RootNamespace>theodicean.Generators</RootNamespace>
         <IsTrimmable>false</IsTrimmable>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
