--- a/.editorconfig
+++ b/.editorconfig
@@ -358,3 +358,4 @@ dotnet_diagnostic.MA0051.severity = none
 dotnet_diagnostic.MA0007.severity = none
 dotnet_diagnostic.MA0020.severity = none
 dotnet_diagnostic.CS9124.severity = error
+dotnet_diagnostic.CS1591.severity = none
