Fix documentation file

--- a/src/theodicean.SourceGenerators.Attributes/theodicean.SourceGenerators.Attributes.csproj
+++ b/src/theodicean.SourceGenerators.Attributes/theodicean.SourceGenerators.Attributes.csproj
@@ -9,6 +9,9 @@
         <IsTrimmable>false</IsTrimmable>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <IsPackable>false</IsPackable>
+
+        <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
