--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -24,7 +24,7 @@ jobs:
         uses: JetBrains/qodana-action@v2025.1
         with:
           pr-mode: true
-#          args: --baseline,qodana.sarif.json
+          args: --baseline,qodana.sarif.json
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_23020140 }}
           QODANA_ENDPOINT: 'https://qodana.cloud'
