--- a/src/Theodicean.SourceGenerators/Theodicean.SourceGenerators.csproj
+++ b/src/Theodicean.SourceGenerators/Theodicean.SourceGenerators.csproj
@@ -24,6 +24,7 @@
         <PackageProjectUrl>https://github.com/henrikwidlund/theodicean.sourcegenerators</PackageProjectUrl>
         <RepositoryUrl>https://github.com/henrikwidlund/theodicean.sourcegenerators.git</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
@@ -35,6 +36,10 @@
         </PackageReference>
         <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="4.14.0" PrivateAssets="all" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" PrivateAssets="all" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
