More attempts at source link

--- a/src/Theodicean.SourceGenerators.Attributes/Theodicean.SourceGenerators.Attributes.csproj
+++ b/src/Theodicean.SourceGenerators.Attributes/Theodicean.SourceGenerators.Attributes.csproj
@@ -9,6 +9,7 @@
         <IsTrimmable>false</IsTrimmable>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <IsPackable>false</IsPackable>
+        <DebugType>embedded</DebugType>
 
         <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -16,6 +17,10 @@
 
     <ItemGroup>
       <PackageReference Include="Meziantou.Analyzer" Version="2.0.212">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
