--- a/tests/Theodicean.SourceGenerators.Tests/Theodicean.SourceGenerators.Tests.csproj
+++ b/tests/Theodicean.SourceGenerators.Tests/Theodicean.SourceGenerators.Tests.csproj
@@ -21,12 +21,8 @@
         </PackageReference>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
-        <PackageReference Include="Verify.Xunit" Version="31.4.1" />
-        <PackageReference Include="xunit" Version="2.9.3" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
+        <PackageReference Include="Verify.XunitV3" Version="31.4.1" />
+        <PackageReference Include="xunit.v3" Version="3.2.0" />
     </ItemGroup>
 
     <ItemGroup>
