--- a/qodana.yaml
+++ b/qodana.yaml
@@ -3,7 +3,7 @@ linter: jetbrains/qodana-cdnet:2025.2-eap
 profile:
   name: qodana.recommended
 dotnet:
-  solution: Theodicean.SourceGenerators.sln
+  solution: Theodicean.SourceGenerators.slnx
 include:
   - name: CheckDependencyLicenses
   - name: CompareNonConstrainedGenericWithNull
