--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -46,6 +46,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          ${{ runner.temp }}\scanner\dotnet-sonarscanner begin /k:"henrikwidlund_theodicean.sourcegenerators" /o:"henrikwidlund" /d:sonar.token="$env:SONAR_TOKEN" /d:sonar.coverage.exclusions=**/*
+          ${{ runner.temp }}\scanner\dotnet-sonarscanner begin /k:"henrikwidlund_theodicean.sourcegenerators" /o:"henrikwidlund" /d:sonar.token="$env:SONAR_TOKEN"
           dotnet build
+          dotnet test --no-build --verbosity normal --coverage --coverage-output-format cobertura
           ${{ runner.temp }}\scanner\dotnet-sonarscanner end /d:sonar.token="$env:SONAR_TOKEN"
