--- a/tests/Theodicean.SourceGenerators.Tests/Theodicean.SourceGenerators.Tests.csproj
+++ b/tests/Theodicean.SourceGenerators.Tests/Theodicean.SourceGenerators.Tests.csproj
@@ -11,22 +11,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="coverlet.collector" Version="6.0.4">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
         <PackageReference Include="Meziantou.Analyzer" Version="2.0.256">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="5.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
-        <PackageReference Include="Verify.XunitV3" Version="31.7.2" />
-        <PackageReference Include="xunit.v3" Version="3.2.0" />
+        <PackageReference Include="TUnit" Version="1.2.11" />
+        <PackageReference Include="Verify.TUnit" Version="31.7.2" />
     </ItemGroup>
 
     <ItemGroup>
-        <Using Include="Xunit"/>
+        <Using Include="TUnit"/>
     </ItemGroup>
 
     <ItemGroup>
