--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
         run: dotnet build --no-restore
 
       - name: Run Unit Tests
-        run: dotnet test --no-build --verbosity normal --coverage --coverage-output-format cobertura
+        run: dotnet test --no-build --no-restore --verbosity normal --coverage --coverage-output-format cobertura
