--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -48,5 +48,5 @@ jobs:
         run: |
           ${{ runner.temp }}\scanner\dotnet-sonarscanner begin /k:"henrikwidlund_theodicean.sourcegenerators" /o:"henrikwidlund" /d:sonar.token="$env:SONAR_TOKEN"
           dotnet build
-          dotnet test --no-build --verbosity normal --coverage --coverage-output-format cobertura
+          dotnet test --no-build --no-restore --verbosity normal --coverage --coverage-output-format cobertura
           ${{ runner.temp }}\scanner\dotnet-sonarscanner end /d:sonar.token="$env:SONAR_TOKEN"
