--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -9,6 +9,7 @@ jobs:
   build:
     name: Build and analyze
     runs-on: windows-latest
+    if: github.actor != 'dependabot[bot]'
     steps:
       - name: Set up JDK 17
         uses: actions/setup-java@v5
