--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -72,6 +72,7 @@ jobs:
         with:
           files: |
             ./artifacts/*.nupkg
+            ./artifacts/*.snupkg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -80,3 +81,4 @@ jobs:
         with:
           subject-path: |
             ./artifacts/*.nupkg
+            ./artifacts/*.snupkg
